<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.game.quiz.QuizActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:paddingBottom="32dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_quiz"
            android:layout_width="350dp"
            android:layout_height="650dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz"
                    android:textSize="45sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/count_quiz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/default_quiz_number"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/count_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawableTop="@drawable/ic_timer"
                    android:text="@string/default_quiz_timer"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/questions"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <android.widget.Button
                    android:id="@+id/option1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/option_bg"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:enabled="true"
                    android:text="@string/option1"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp" />

                <android.widget.Button
                    android:id="@+id/option2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/option_bg"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:enabled="true"
                    android:text="@string/option2"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp" />

                <android.widget.Button
                    android:id="@+id/option3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/option_bg"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:enabled="true"
                    android:text="@string/option3"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp" />

                <android.widget.Button
                    android:id="@+id/option4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/option_bg"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:enabled="true"
                    android:text="@string/option4"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Empty View for give space last cv's shadow effect -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/cv_quiz"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>